--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "express-session": "^1.18.0",
+    "mongodb": "^6.8.0",
+    "nodemon": "^3.1.4",
+    "oauth4webapi": "^2.11.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
