--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodemon": "^3.1.4",
     "oauth4webapi": "^2.11.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^16.2.0",
+    "three": "^0.166.1"
   }
 }
